--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,7 @@ body {
     width: 500px;
     text-align:center;
     font-size: 40px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: "Tinos", serif;
   }
   .headerRight {
     float: right;
